# allspark-trace

./: .gitignore  .gitmodules  Cargo.toml  README.md  rustfmt.toml
sample_apps/: gen_insts.sh
sample_apps/orig/: pend_mono.wasm  pend_mono.wat
scripts/: allspark_gen_traceblocks.py  process_tracefiles.py
src/: main.rs
