[package]
name = "allspark-trace"
version = "0.1.0"
edition = "2021"
resolver = "2"

authors = ["Arjun Ramesh <arjunr2@andrew.cmu.edu>"]
license = "MIT"


[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
env_logger = "0.11.5"
libc = "0.2.164"
log = "0.4.22"
once_cell = "1.20.2"
serde = { version = "1.0.215", features = ["derive"] }
serde-pickle = "1.2.0"
tempfile = "3.14.0"
uuid = { version = "1.10.0", features = ["v4"] }
wamr-rust-sdk = { git = "https://github.com/arjunr2/wamr-rust-sdk.git" }

